Fixed spacing in register form. Also, changed css of form p tag.

--- a/src/Forms.css
+++ b/src/Forms.css
@@ -11,7 +11,11 @@ body {
     border-radius: 25px;
   }
   
-  h1, h2, h3, p {
+  h1, h2, h3 {
+    text-align: center;
+  }
+
+  form p{
     text-align: center;
   }
   
